// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correclty with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correclty with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
